Agregado y configuración de botones de enlace en footer

--- a/Encriptador.html
+++ b/Encriptador.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+    <!DOCTYPE html>
 
 <html lang="esp">
     <head>
@@ -48,11 +48,12 @@
         </main>
 
         <footer>
-            <img id="logoGris" src="Imágenes/logoGris.png">
-            <img id="Ilkdn" src="Imágenes/Icono Lnkdn.png">
-            <img id="Igthb" src="Imágenes/Icono Gthb.png">
-            <img id="Idscrd" src="Imágenes/Icono Dscrd.png">
             <p class="copyright">&copy Ariel Román Jacobi - 2022</p>
+            <div id="enlace">
+                <a href="https://app.aluracursos.com/user/ariel-jacobi" target="_blank"><img id="logoGris" src="Imágenes/logoGris.png"></a>
+                <a href="https://www.linkedin.com/in/ariel-jacobi-2b770a234" target="_blank"><img id="Ilkdn" src="Imágenes/Icono Lnkdn.png"></a>
+                <a href="https://github.com/Arielopolis" target="_blank"><img id="Igthb" src="Imágenes/Icono Gthb.png"></a>
+            </div>
         </footer>
 
     </body>
